
===========
Changes log  
===========

@version-full@ (@release-date@)
 - Fixed error when parsing weak Etag. Reported and contributed by Larry Gately.

1.0.5 (2007-09-06)
[Bugs fixed]
 - Potential NPE in REST book example (ch7, UserResource). Reported by Marc Portier.
 - Potential NPE during KeyStore initialization for Simple HTTPS connector. Report by Quintin May.
 - Transmit the Component dispatcher to the ServletContextAdapter. Reported by Mike Moran.
 - Fixed bug in the DirectoryResource when looking for variant references. Reported by Mike Moran.
 - Fixed address binding issue with Simple HTTP/HTTPS connectors. Patch contributed by Alex Milowski.
 - Fixed potential NPE in Restlet.getContext() method. Patch contributed by Alex Milowski.
 - Fixed potential NPE in SecurityUtils. Patch contributed by Alex Milowski.
 - When a component is restarted, the new applications and virtual hosts are no taken into account. 
   Patch from Alex Milowski.
 - Relaxed media-type equality test in ch7/BookmarkResource#put method. Reported by Katrin.
 - Fixed bug when decoding percent-encoded sequences in lowercase (see rfc 3986, chapter 2.1). 
   Reported by Paul Kaiser and contributed by Rob Heittman.

[Enhancements] 
 - Clarified the Javadocs for the Variant's "identifier" property. Reported by Joe Holloway.
 - Clarified the Javadocs for the Resource.getVariants() method. Suggested by John D. Mitchell.
 - An exception is not thrown anymore when the Etag can not be successfully parsed.
 - The OPTIONS method now always returns an "Allow" HTTP header to more closely match the HTTP 1.1
   and WebDAV specifications. Suggested by Rob Heittman.
 - Replaced the System.out.println() and System.err.println() calls by logger calls. Suggested by Alex Milowski.

1.0.4 (2007-07-25)
[Bugs fixed]
 - Fixed spacing issue in HTTP reading/writing code (NRE's HttpUtils class). Reported by Ilya Klyuchnikov.