@@ -4,7 +4,9 @@ Changes log
 ===========
 
 @version-full@ (@release-date@)
- - Fixed error when parsing weak Etag. Reported and contributed by Larry Gately.
+[Bugs fixed]
+ - Fixed error when parsing weak Etags. Reported by Larry Gately and John R. Fallows.
+ - Fixed Redirector which didn't implement the SEE_OTHER type of redirections.
 
 1.0.5 (2007-09-06)
 [Bugs fixed]
